--- a/css/ejercicio-sass.css
+++ b/css/ejercicio-sass.css
@@ -1,6 +1,5 @@
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -9,11 +8,34 @@ body {
 }
 
 main {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 100%;
   height: 100vh;
+}
+
+.estadistica--perfil {
+  display: flex;
+  width: 50%;
+  height: 90px;
+  padding-top: 15px;
+  margin: 0 auto;
+  justify-content: space-around;
+  border-radius: 20px;
+  background-color: #ffffff;
+  color: #333333;
+}
+.estadistica--perfil h3 {
+  font-weight: 600;
+  font-size: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: "Oswald", sans-serif;
+}
+.estadistica--perfil span {
+  font-size: 12px;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: "Oswald", sans-serif;
 }
 
 .perfil {
@@ -22,27 +44,23 @@ main {
   color: #ffffff;
   background-color: #8841da;
 }
-
 .perfil__avatar {
   display: block;
   margin: 0 auto;
   border-radius: 50em;
 }
-
-.perfil__nombre {
+.perfil__nombre, .perfil__minibio h2 {
   text-transform: uppercase;
   text-align: center;
   font-size: 20px;
   font-family: "Oswald", sans-serif;
 }
-
-.perfil__titulo {
+.perfil__titulo, .perfil__minibio h3 {
   text-transform: uppercase;
   text-align: center;
   font-weight: 700;
   font-size: 12px;
 }
-
 .perfil__boton {
   display: block;
   width: 100px;
@@ -57,32 +75,36 @@ main {
   color: #ffffff;
 }
 
-.estadistica--perfil {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.perfil__minibio {
+  margin: 0 auto;
+  padding-top: 20px;
+}
+.ubicacion--perfil {
   width: 50%;
   height: 90px;
-  padding-top: 15px;
-  margin: 0 auto;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  margin: 30px auto 0 auto;
+  padding: 20px 0 0 50px;
   border-radius: 20px;
   background-color: #ffffff;
+  color: #333333;
 }
-
-.estadistica--perfil h3 {
+.ubicacion--perfil i {
+  display: block;
+  float: left;
+  padding-right: 10px;
+  font-size: 40px;
+  color: #3f579a;
+}
+.ubicacion--perfil h2 {
+  text-transform: uppercase;
   font-weight: 600;
   font-size: 20px;
-  text-align: center;
+  font-family: "Oswald", sans-serif;
+}
+.ubicacion--perfil h3 {
   text-transform: uppercase;
+  font-size: 12px;
   font-family: "Oswald", sans-serif;
 }
 
-.estadistica--perfil span {
-  font-size: 12px;
-  text-align: center;
-  text-transform: uppercase;
-  font-family: "Oswald", sans-serif;
-}
 /*# sourceMappingURL=ejercicio-sass.css.map */
