--- a/css/componentes/_globales.scss
+++ b/css/componentes/_globales.scss
@@ -7,6 +7,15 @@ $color-claro: #ffffff;
 $color-secundario: #8841da;
 $color-variacion: #3f579a;
 
+//declarando un mixin
+@mixin caja {
+  border-radius: 20px;
+  // box-shadow: 0px 20px 33px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 20px 33px 0px rgba($color-primario, 0.5);
+  color: $color-primario;
+  background-color: $color-claro;
+}
+
 * {
   box-sizing: border-box;
 }
