--- a/css/ejercicio-sass.scss
+++ b/css/ejercicio-sass.scss
@@ -3,3 +3,4 @@
 @import "./componentes/estadisticas";
 @import "./componentes/perfiles";
 @import "./componentes/ubicaciones";
+@import "./componentes/galerias";
