--- a/css/componentes/_estadisticas.scss
+++ b/css/componentes/_estadisticas.scss
@@ -11,12 +11,14 @@
     font-size: 20px;
     text-align: center;
     text-transform: uppercase;
-    font-family: $Fuente2;
+    // font-family: $Fuente2;
+    @include titulos($Fuente2);
   }
   span {
     font-size: 12px;
     text-align: center;
     text-transform: uppercase;
-    font-family: $Fuente2;
+    // font-family: $Fuente2;
+    @include titulos($Fuente2);
   }
 }
