--- a/css/componentes/_galerias.scss
+++ b/css/componentes/_galerias.scss
@@ -18,7 +18,8 @@
     margin-bottom: 10px;
     text-transform: uppercase;
     font-size: 20px;
-    font-family: $Fuente2;
+    // font-family: $Fuente2;
+    @include titulos($Fuente2);
   }
   img {
     border-radius: 10px;
