--- a/css/ejercicio-sass.css
+++ b/css/ejercicio-sass.css
@@ -25,7 +25,7 @@ body {
 main {
   display: flex;
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 .estadistica--perfil {
@@ -131,7 +131,7 @@ main {
 }
 
 .galeria {
-  width: 50%;
+  width: 60%;
   height: 250px;
   margin: 10px auto;
   padding: 20px 0 0 30px;
@@ -159,6 +159,32 @@ main {
 }
 .galeria img {
   border-radius: 10px;
+}
+
+.articulos {
+  width: 40%;
+  padding: 50px 0 0 50px;
+}
+
+.articulo {
+  margin-bottom: 75px;
+  border-bottom: 3px solid #8841da;
+}
+.articulo__categoria {
+  font-weight: 500;
+  font-size: 16px;
+  color: #8841da;
+  font-family: "Oswald", sans-serif;
+  text-transform: uppercase;
+}
+.articulo__titulo {
+  font-size: 20px;
+  font-family: "Oswald", sans-serif;
+  text-transform: uppercase;
+}
+.articulo__descripcion {
+  margin-bottom: 30px;
+  padding-right: 100px;
 }
 
 /*# sourceMappingURL=ejercicio-sass.css.map */
