--- a/css/ejercicio-sass.scss
+++ b/css/ejercicio-sass.scss
@@ -4,3 +4,4 @@
 @import "./componentes/perfiles";
 @import "./componentes/ubicaciones";
 @import "./componentes/galerias";
+@import "./componentes/articulos";
